<resources>
    <string name="app_name">Bumblebee</string>

    <string name="done_string">Done!</string>
    <string name="results">Results</string>
    <string name="high_score">High Score:</string>
    <string name="play_again">Play again</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_done">Done</string>
    <string name="action_save">Save</string>
    <string name="total_number_of_words">Total Number of words:</string>
    <string name="total_number_of_games">Total Number of games:</string>
    <string name="total_number_of_wrong_words">Total number of wrong words:</string>
    <string name="total_number_of_correct_words">Total number of correct words:</string>
    <string name="action_edit_profile">Edit Profile</string>
    <string name="profile_stats"><![CDATA[Profile & Stats]]></string>
    <string name="action_close">Close</string>
    <string name="score">Score: </string>
    <string name="feedback">Feedback</string>
    <string name="share">Share</string>
    <string name="communicate">Communicate</string>
    <string name="stats">Stats</string>
    <string name="rankings">Rankings</string>
    <string name="speed_game">Speed Game</string>
    <string name="history">History</string>
    <string name="facebook_application_id">2193360704033889</string>
    <string name="facebook_login_protocol_scheme">fb2193360704033889</string>
    <string name="facebook_app_id">2193360704033889</string>
    <string name="fb_login_protocol_scheme">fb2193360704033889</string>
</resources>
