<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_speed_game"
            android:icon="@drawable/ic_stopwatch"
            android:title="@string/speed_game" />
        <item
            android:id="@+id/nav_rankings"
            android:icon="@drawable/ic_ranking"
            android:title="@string/rankings" />

        <item
            android:id="@+id/nav_stats"
            android:icon="@drawable/ic_graph"
            android:title="@string/stats" />
        <!--<item android:title="" android:checkable="false"/>-->
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_honeycomb"
            android:title="@string/profile_stats" />
    </group>

        <item android:title="@string/communicate">
            <menu>
                <item
                    android:id="@+id/nav_share"
                    android:icon="@drawable/ic_menu_share"
                    android:title="@string/share" />
                <item
                    android:id="@+id/nav_send"
                    android:icon="@drawable/ic_menu_send"
                    android:title="@string/feedback" />
            </menu>
        </item>

        <item android:title="Logout">

            <menu>

                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/ic_logout"
                    android:title="Logout" />

            </menu>
        </item>
</menu>
