<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="4dp">

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/results_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/results"
                android:textSize="54sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/bee_imageView"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:background="@mipmap/ic_launcher_round"
                android:layout_margin="4dp"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/black" />

            <TextView
                android:id="@+id/highscore_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingBottom="8dp"
                android:text="@string/high_score"
                android:textSize="24sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:paddingBottom="8dp">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/black" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/numberOfWrongWords_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Nb. of wrong words: "
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberOfWrongWords_score_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|end"
                        android:fontFamily="sans-serif-condensed"
                        android:text="0"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/numberOfCorrectWords_textview"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:fontFamily="sans-serif-condensed"
                        android:text="Nb. of correct words: "
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/numberOfCorrectWords_score_textview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|end"
                        android:fontFamily="sans-serif-condensed"
                        android:text="0"
                        android:textStyle="bold" />
                </LinearLayout>

                <Button
                    android:id="@+id/play_again_button"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:paddingTop="8dp"
                    android:text="@string/play_again" />
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <ListView
            android:id="@+id/results_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@android:color/transparent"
            android:dividerHeight="5.0sp"
            android:drawSelectorOnTop="true" />
    </LinearLayout>

</LinearLayout>