<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="?attr/actionBarSize"
    android:background="@color/colorPrimary"
    tools:context=".ui.fragments.ProfileFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

        <include layout="@layout/user_item" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/profile_stats_loading"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/profile_stats_linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="visible"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:text="@string/total_number_of_games"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_number_games_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:gravity="center_vertical|end"
                            android:textStyle="bold"
                            tools:text="24" />
                    </LinearLayout>


                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/linechart2"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="16dp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:text="@string/total_number_of_words"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_number_words_textView"
                            android:layout_width="0dp"
                            android:layout_weight="1"
                            android:layout_height="wrap_content"
                            android:layout_margin="16dp"
                            android:gravity="center_vertical|end"
                            android:textStyle="bold"
                            tools:text="24" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"

                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:text="@string/total_number_of_correct_words"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_number_correct_words_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:gravity="center_vertical|end"
                            android:textStyle="bold"
                            tools:text="24" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"

                        >

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:text="@string/total_number_of_wrong_words"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/total_number_wrong_words_textView"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:layout_margin="16dp"
                            android:gravity="center_vertical|end"
                            android:textStyle="bold"
                            tools:text="24"
                            />
                    </LinearLayout>

                    <com.github.mikephil.charting.charts.LineChart
                        android:id="@+id/linechart3"
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="16dp" />

                    <com.github.mikephil.charting.charts.PieChart
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:layout_margin="16dp"
                        android:id="@+id/pieChart" />

                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </LinearLayout>


</FrameLayout>